--- a/src/app/home/components/top-state-table/top-state-table.component.scss
+++ b/src/app/home/components/top-state-table/top-state-table.component.scss
@@ -2,7 +2,19 @@
   font-size: 0.86rem;
   thead{
     th{
+      vertical-align: top;
       font-weight: 600;
+      &.sticky{
+        // top: 4px;
+        // position: sticky;
+      }
+
+      .table-heading-for-desktop{
+        display: block;
+      }
+      .table-heading-for-mobile{
+        display: none;
+      }
     }
   }
   thead th {
@@ -52,6 +64,21 @@
     td:nth-child(2){
       font-size: 0.72rem;
       font-weight: 600;
+    }
+  }
+}
+
+@media (max-width: 576px){
+  .states-table{
+    thead{
+      th{
+        .table-heading-for-desktop{
+          display: none;
+        }
+        .table-heading-for-mobile{
+          display: block;
+        }
+      }
     }
   }
 }
