--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -52,12 +52,7 @@ body {
 }
 
 .navbar {
-	position: absolute !important;
-	top: 0px;
-	left: 0px;
-	width:100%;
 	height: 70px;
-	padding: 0 1rem !important;
 	z-index: 1000;
 	/* background-color: #fff; */
 	/* box-shadow: 0 0.05rem 0.01rem rgba(75,75,90,.075); */
@@ -65,6 +60,11 @@ body {
 	/* border-bottom: 1px solid rgba(72, 94, 144, .16); */
 	
 }
+
+.navbar-collapse{
+    margin-top: 10px !important;
+}
+
 .navbar .nav-item {
 	display: flex;
 	align-items: center
@@ -186,7 +186,7 @@ body {
 		width: 100%
 	}
 	.awareness-button {
-		width: 64px !important;
+		width: 84px !important;
 		display: inline !important;
 	}
 	.awareness-dropdown-toggle {
