--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -2,7 +2,7 @@
 body{
   font-family: 'Manrope', sans-serif;
   font-weight: 400;
-  padding-top: 4.5rem;
+  //padding-top: 4.5rem;
   //padding-bottom: 4.5rem;
   // padding-left: 10px;
   // padding-right: 10px;
